[gd_scene load_steps=8 format=3 uid="uid://b7ffx06danxf4"]

[ext_resource type="Script" path="res://Scripts/StandardVariants/variant_game_settings.gd" id="1_2gsgr"]
[ext_resource type="Theme" uid="uid://w0bhlln4xhbw" path="res://Themes/Custom_Default/Custom_Default_Wood.tres" id="2_j16bg"]
[ext_resource type="PackedScene" uid="uid://c2y0m27eadb6i" path="res://NodeScene/sample_preset_button.tscn" id="4_bwo0m"]
[ext_resource type="Texture2D" uid="uid://bput4ufl60a8d" path="res://Assets/2D Assets/DiceSprites/4 Sided/dice-four-faces-4.png" id="4_khmns"]
[ext_resource type="Texture2D" uid="uid://dg11no5e2wj2q" path="res://Assets/2D Assets/DiceSprites/6 Sided/dice-six-faces-6.png" id="5_pnw2h"]
[ext_resource type="Texture2D" uid="uid://c1evogae8wvad" path="res://Assets/2D Assets/DiceSprites/8 Sided/dice-eight-faces-8.png" id="6_myglr"]
[ext_resource type="Texture2D" uid="uid://b6xvkxut6v2vv" path="res://Assets/2D Assets/DiceSprites/12 Sided/dice-twelve-faces-12.png" id="7_dgx27"]

[node name="GameSettings" type="CanvasLayer"]
script = ExtResource("1_2gsgr")
presets_folder = "res://Presets/Bluff"

[node name="UIBox" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -469.0
offset_top = -310.0
offset_right = 182.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.44, 2.28)
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_j16bg")

[node name="SimplePresetsBox" type="VBoxContainer" parent="UIBox"]
layout_mode = 2
theme = ExtResource("2_j16bg")

[node name="TitleBox" type="CenterContainer" parent="UIBox/SimplePresetsBox"]
layout_mode = 2
theme = ExtResource("2_j16bg")

[node name="Label" type="Label" parent="UIBox/SimplePresetsBox/TitleBox"]
layout_mode = 2
theme = ExtResource("2_j16bg")
text = "Select Game Dice"

[node name="PresetsBox" type="CenterContainer" parent="UIBox/SimplePresetsBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PresetsButtonsContainer" type="GridContainer" parent="UIBox/SimplePresetsBox/PresetsBox"]
layout_mode = 2
columns = 4

[node name="d4Tex2" type="TextureRect" parent="UIBox/SimplePresetsBox/PresetsBox/PresetsButtonsContainer"]
layout_mode = 2
texture = ExtResource("4_khmns")
expand_mode = 5
stretch_mode = 5

[node name="d6Tex2" type="TextureRect" parent="UIBox/SimplePresetsBox/PresetsBox/PresetsButtonsContainer"]
layout_mode = 2
texture = ExtResource("5_pnw2h")
expand_mode = 5
stretch_mode = 5

[node name="d8Tex2" type="TextureRect" parent="UIBox/SimplePresetsBox/PresetsBox/PresetsButtonsContainer"]
layout_mode = 2
texture = ExtResource("6_myglr")
expand_mode = 5
stretch_mode = 5

[node name="d12Tex2" type="TextureRect" parent="UIBox/SimplePresetsBox/PresetsBox/PresetsButtonsContainer"]
layout_mode = 2
texture = ExtResource("7_dgx27")
expand_mode = 5
stretch_mode = 5

[node name="d4" parent="UIBox/SimplePresetsBox/PresetsBox/PresetsButtonsContainer" instance=ExtResource("4_bwo0m")]
layout_mode = 2
text = "4-Sided"

[node name="d6" parent="UIBox/SimplePresetsBox/PresetsBox/PresetsButtonsContainer" instance=ExtResource("4_bwo0m")]
layout_mode = 2
text = "6-Sided"

[node name="d8" parent="UIBox/SimplePresetsBox/PresetsBox/PresetsButtonsContainer" instance=ExtResource("4_bwo0m")]
layout_mode = 2
text = "8-Sided"

[node name="d12" parent="UIBox/SimplePresetsBox/PresetsBox/PresetsButtonsContainer" instance=ExtResource("4_bwo0m")]
layout_mode = 2
text = "12-Sided"

[node name="ControlButtonsBox" type="CenterContainer" parent="UIBox/SimplePresetsBox"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UIBox/SimplePresetsBox/ControlButtonsBox"]
layout_mode = 2

[node name="ConnectCode" type="Button" parent="UIBox/SimplePresetsBox/ControlButtonsBox/HBoxContainer" groups=["ConfirmButtons"]]
layout_mode = 2
size_flags_horizontal = 3
text = "Copy Connect Code"

[node name="StartGame" type="Button" parent="UIBox/SimplePresetsBox/ControlButtonsBox/HBoxContainer" groups=["ConfirmButtons"]]
layout_mode = 2
size_flags_horizontal = 3
text = "Start Game"

[node name="AdvancedSettings" type="Button" parent="UIBox/SimplePresetsBox/ControlButtonsBox/HBoxContainer" groups=["ConfirmButtons"]]
layout_mode = 2
size_flags_horizontal = 3
text = "Advanced Settings"

[node name="BacktoHome" type="Button" parent="UIBox/SimplePresetsBox/ControlButtonsBox/HBoxContainer" groups=["BackButtons"]]
layout_mode = 2
size_flags_horizontal = 3
text = "Back to Home"

[node name="SettingsSplitBox" type="HSplitContainer" parent="UIBox"]
visible = false
layout_mode = 2
split_offset = 2
dragger_visibility = 1

[node name="Settings_Setup" type="VBoxContainer" parent="UIBox/SettingsSplitBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="UIBox/SettingsSplitBox/Settings_Setup"]
layout_mode = 2
theme = ExtResource("2_j16bg")
theme_override_constants/margin_top = 3
theme_override_constants/margin_bottom = 3

[node name="Instructions" type="Label" parent="UIBox/SettingsSplitBox/Settings_Setup/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_j16bg")
text = "Select Game Settings:"
horizontal_alignment = 1

[node name="OptionsVBox" type="VBoxContainer" parent="UIBox/SettingsSplitBox/Settings_Setup"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_j16bg")

[node name="PlayerNames" type="HBoxContainer" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox"]
layout_mode = 2
theme = ExtResource("2_j16bg")
theme_override_constants/separation = 0
alignment = 1

[node name="Player1Name" type="LineEdit" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox/PlayerNames"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j16bg")
placeholder_text = "Host Player Name"
alignment = 1

[node name="Player2Name" type="LineEdit" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox/PlayerNames"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j16bg")
placeholder_text = "Client Player Name"
alignment = 1

[node name="WinCondition" type="HBoxContainer" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox"]
layout_mode = 2
theme = ExtResource("2_j16bg")

[node name="Instructions4" type="Label" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox/WinCondition"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j16bg")
text = "Choose Win Condition:"
horizontal_alignment = 1

[node name="ConditionSelect" type="OptionButton" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox/WinCondition"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j16bg")
alignment = 1
selected = 1
allow_reselect = true
item_count = 2
popup/item_0/text = "Score"
popup/item_0/disabled = true
popup/item_1/text = "Health Points"
popup/item_1/id = 1

[node name="HealthPoints" type="HBoxContainer" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox"]
layout_mode = 2
theme = ExtResource("2_j16bg")

[node name="Instructions2" type="Label" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox/HealthPoints"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j16bg")
text = "Player Hp:"
horizontal_alignment = 1

[node name="HealthPoints" type="SpinBox" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox/HealthPoints"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j16bg")
min_value = 1.0
max_value = 1000.0
value = 5.0
alignment = 1
update_on_text_changed = true
suffix = "Hp"

[node name="BluffButton" type="CheckButton" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox/HealthPoints"]
layout_mode = 2
theme = ExtResource("2_j16bg")
disabled = true
button_pressed = true
text = "Bluff Mode: "

[node name="Rounds" type="HBoxContainer" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox"]
layout_mode = 2
theme = ExtResource("2_j16bg")

[node name="Instructions3" type="Label" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox/Rounds"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j16bg")
text = "Hands:"
horizontal_alignment = 1

[node name="Rounds" type="SpinBox" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox/Rounds"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j16bg")
min_value = 1.0
max_value = 50.0
value = 8.0
alignment = 1
update_on_text_changed = true

[node name="Instructions4" type="Label" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox/Rounds"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j16bg")
text = "Rolls per Hand:"
horizontal_alignment = 1

[node name="RoundRolls" type="SpinBox" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox/Rounds"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j16bg")
min_value = 1.0
max_value = 10.0
value = 3.0
alignment = 1
update_on_text_changed = true

[node name="Dice" type="HBoxContainer" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox"]
layout_mode = 2
theme = ExtResource("2_j16bg")

[node name="Instructions4" type="Label" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox/Dice"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j16bg")
text = "Number of Dice:"
horizontal_alignment = 1

[node name="DiceCount" type="SpinBox" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox/Dice"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("2_j16bg")
min_value = 1.0
max_value = 9.0
value = 7.0
alignment = 1

[node name="DiceType" type="OptionButton" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox/Dice"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j16bg")
alignment = 1
selected = 1
allow_reselect = true
item_count = 4
popup/item_0/text = "6 Sided Dice"
popup/item_0/id = 6
popup/item_1/text = "8 Sided Dice"
popup/item_1/id = 8
popup/item_2/text = "4 Sided Dice"
popup/item_2/id = 4
popup/item_3/text = "12 Sided Dice"
popup/item_3/id = 12

[node name="HandLimit" type="HBoxContainer" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox"]
layout_mode = 2
theme = ExtResource("2_j16bg")

[node name="OpponentRollVisible" type="CheckButton" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox/HandLimit"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j16bg")
disabled = true
button_pressed = true
text = "Show Opponent Roll:"

[node name="AdvancedSettingsButton" type="Button" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox/HandLimit"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Modify Hand restrictions"
theme = ExtResource("2_j16bg")
text = "Modify Hand Rules"

[node name="TimedRounds" type="HBoxContainer" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox"]
layout_mode = 2
theme = ExtResource("2_j16bg")

[node name="TimedRoundsToggle" type="CheckButton" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox/TimedRounds"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j16bg")
button_pressed = true
text = "Timed Rounds:"

[node name="RoundTime" type="SpinBox" parent="UIBox/SettingsSplitBox/Settings_Setup/OptionsVBox/TimedRounds"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("2_j16bg")
min_value = 20.0
max_value = 60.0
value = 20.0
alignment = 1

[node name="Buttons" type="HBoxContainer" parent="UIBox/SettingsSplitBox/Settings_Setup"]
layout_mode = 2
theme = ExtResource("2_j16bg")
alignment = 1

[node name="CopyConnectButton" type="Button" parent="UIBox/SettingsSplitBox/Settings_Setup/Buttons" groups=["ConfirmButtons"]]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j16bg")
text = "Copy Connect Code"

[node name="StartGame" type="Button" parent="UIBox/SettingsSplitBox/Settings_Setup/Buttons" groups=["ConfirmButtons"]]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j16bg")
text = "Start Game"

[node name="BackToHomeButton" type="Button" parent="UIBox/SettingsSplitBox/Settings_Setup/Buttons" groups=["BackButtons"]]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j16bg")
text = "Back to Home"

[node name="PresetsPanelBox" type="VBoxContainer" parent="UIBox/SettingsSplitBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_j16bg")

[node name="PresetLabel" type="Label" parent="UIBox/SettingsSplitBox/PresetsPanelBox"]
layout_mode = 2
theme = ExtResource("2_j16bg")
text = "Presets:"

[node name="PresetsScrollBar" type="ScrollContainer" parent="UIBox/SettingsSplitBox/PresetsPanelBox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_j16bg")

[node name="PresetsButtons" type="VBoxContainer" parent="UIBox/SettingsSplitBox/PresetsPanelBox/PresetsScrollBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_j16bg")

[node name="SamplePreset" parent="UIBox/SettingsSplitBox/PresetsPanelBox/PresetsScrollBar/PresetsButtons" instance=ExtResource("4_bwo0m")]
layout_mode = 2

[node name="NewPresetName" type="LineEdit" parent="UIBox/SettingsSplitBox/PresetsPanelBox"]
layout_mode = 2
theme = ExtResource("2_j16bg")
placeholder_text = "New Preset Name"
alignment = 1

[node name="AddPreset" type="Button" parent="UIBox/SettingsSplitBox/PresetsPanelBox" groups=["ConfirmButtons"]]
layout_mode = 2
theme = ExtResource("2_j16bg")
text = "Add Current Settings as Preset"

[node name="Settings_Advanced" type="VBoxContainer" parent="UIBox"]
visible = false
layout_mode = 2
theme = ExtResource("2_j16bg")

[node name="AdvancedInfo" type="Label" parent="UIBox/Settings_Advanced"]
layout_mode = 2
theme = ExtResource("2_j16bg")
text = "Modify Rules for Individual hands"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UIBox/Settings_Advanced"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme = ExtResource("2_j16bg")
horizontal_scroll_mode = 0
scroll_deadzone = 3

[node name="advanced_settings_vbox" type="VBoxContainer" parent="UIBox/Settings_Advanced/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_j16bg")
theme_override_constants/separation = 3

[node name="SaveSettings" type="Button" parent="UIBox/Settings_Advanced"]
layout_mode = 2
theme = ExtResource("2_j16bg")
text = "Save Settings"

[node name="ReturnToSettings" type="Button" parent="UIBox/Settings_Advanced"]
layout_mode = 2
theme = ExtResource("2_j16bg")
text = "Return"

[node name="Settings_Wait" type="VBoxContainer" parent="UIBox"]
visible = false
layout_mode = 2
theme = ExtResource("2_j16bg")

[node name="WaitInfo" type="Label" parent="UIBox/Settings_Wait"]
layout_mode = 2
theme = ExtResource("2_j16bg")
text = "Waiting for host to
set up game rules"
horizontal_alignment = 1

[node name="ExitGameButton" type="Button" parent="UIBox/Settings_Wait"]
layout_mode = 2
theme = ExtResource("2_j16bg")
text = "Exit Game"
